--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-6 col-sm-5">
-        <img class="img-fluid" style="" src="img/1.png" alt="">
-        <img class="img-fluid hidden-xl-up" style="padding-top:27px" src="img/2.png" alt="">
+        <img class="img-fluid" style="" src="img/1.jpg" alt="">
+        <img class="img-fluid hidden-xl-up" style="padding-top:27px" src="img/2.jpg" alt="">
       </div>
       <div class="col-xl-6 col-sm-7">
         <p class="mod-font-1"><span class="ac-color ffFuturaMedium">— About</span><br class="hidden-xl-up"> <span class="ac-default ffLucida">Anastasia Aleksova</span></p>
@@ -110,7 +110,7 @@
           <div class="bgimg-block"></div>
         </div>
       </div>
-      <div class="col-xl-6 hidden-lg-down"><img class="img-fluid" src="img/2.png" alt=""></div>
+      <div class="col-xl-6 hidden-lg-down"><img class="img-fluid" src="img/2.jpg" alt=""></div>
     </div>
   </div>
 </section>
