--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
 			<div class="row">			
 				<div class="col-xl-4 hidden-lg-down">
 					<div class="text-mod-1">— What we do</div>
-					<img src="img/whatwedo.png" class="img-fluid" alt="">
+					<img src="img/whatwedo.jpg" class="img-fluid" alt="">
 				</div>
 				<div class="col-xl-4 col-xs-6">
 					<div class="second-block">
@@ -176,10 +176,10 @@
 			</div>
 			<div class="collection-2">
 				<div class="row">
-					<div class="col-xs-6"><img src="img/lingerie_ochrid/1.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-6"><img src="img/lingerie_ochrid/2.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-6"><img src="img/lingerie_ochrid/3.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-6"><img src="img/lingerie_ochrid/4.png" alt="" class="img-fluid"></div>
+					<div class="col-xs-6"><img src="img/lingerie_ochrid/1.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-6"><img src="img/lingerie_ochrid/2.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-6"><img src="img/lingerie_ochrid/3.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-6"><img src="img/lingerie_ochrid/4.jpg" alt="" class="img-fluid"></div>
 				</div>
 			</div>
 		</div>
@@ -192,9 +192,9 @@
 			</div>
 			<div class="collection-2">
 				<div class="row">
-					<div class="col-xs-4"><img src="img/lingerie_bliss/1.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/lingerie_bliss/2.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/lingerie_bliss/3.png" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/lingerie_bliss/1.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/lingerie_bliss/2.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/lingerie_bliss/3.jpg" alt="" class="img-fluid"></div>
 				</div>
 			</div>
 		</div>
@@ -207,21 +207,21 @@
 			</div>
 			<div class="collection-2">
 				<div class="row">
-					<div class="col-xs-4"><img src="img/wild_orchid/1.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/2.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/3.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/4.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/5.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/6.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/7.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/8.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/9.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/10.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/11.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/12.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/13.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/14.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/wild_orchid/15.png" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/1.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/2.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/3.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/4.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/5.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/6.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/7.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/8.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/9.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/10.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/11.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/12.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/13.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/14.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/wild_orchid/15.jpg" alt="" class="img-fluid"></div>
 				</div>
 			</div>
 		</div>
@@ -234,14 +234,14 @@
 			</div>
 			<div class="collection-2">
 				<div class="row">
-					<div class="col-xs-8"><img src="img/man_underwear/1.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/man_underwear/2.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/man_underwear/3.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/man_underwear/4.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/man_underwear/5.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/man_underwear/6.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/man_underwear/7.png" alt="" class="img-fluid"></div>
-					<div class="col-xs-4"><img src="img/man_underwear/8.png" alt="" class="img-fluid"></div>
+					<div class="col-xs-8"><img src="img/man_underwear/1.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/man_underwear/2.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/man_underwear/3.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/man_underwear/4.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/man_underwear/5.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/man_underwear/6.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/man_underwear/7.jpg" alt="" class="img-fluid"></div>
+					<div class="col-xs-4"><img src="img/man_underwear/8.jpg" alt="" class="img-fluid"></div>
 				</div>
 			</div>
 		</div>
@@ -399,7 +399,7 @@
 						<div class="col-xs-6">
 						<div class="row">
 							<div class="col-xs-12">
-									<img class="img-fluid" src="img/lingerie designer/Lobster Collection/Lobster Girl Side.png" alt="">
+									<img class="img-fluid" src="img/lingerie designer/Lobster Collection/Lobster-Girl-Side.jpg" alt="">
 							</div>
 						</div>						
 						</div>
